Switch maintainer scripts to Ubuntu LTS.

--- a/maintainer_scripts/Dockerfile
+++ b/maintainer_scripts/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:stretch
+FROM ubuntu:bionic
 
 ARG DEBIAN_FRONTEND=noninteractive
 
@@ -9,14 +9,13 @@ RUN apt-get install -y software-properties-common apt-transport-https gnupg2 \
  && apt-get clean \
  && rm -r /var/lib/apt/lists/*
 
-RUN add-apt-repository -y "deb http://deb.debian.org/debian stretch-backports main" \
- && add-apt-repository -y "deb [arch=amd64] https://packages.microsoft.com/debian/9/prod stretch main" \
- && apt-key adv --fetch-keys https://packages.microsoft.com/keys/microsoft.asc \
+RUN apt-key adv --fetch-keys https://packages.microsoft.com/keys/microsoft.asc \
+ && add-apt-repository -y "deb [arch=amd64] https://packages.microsoft.com/ubuntu/18.04/prod bionic main" \
  && apt-get update
 
 RUN apt-get install -y --no-install-recommends dotnet-sdk-2.2
 RUN apt-get install -y --no-install-recommends default-jdk junit4
-RUN apt-get install -y --no-install-recommends -t stretch-backports nodejs npm
+RUN apt-get install -y --no-install-recommends nodejs npm
 
 RUN npm i -g jest-cli
 RUN npm i -g jsdoc
