--- a/cs/docs/manifest.json
+++ b/cs/docs/manifest.json
@@ -12,7 +12,7 @@
           "hash": "aA+yv7sOg7RQhjw3mPw2uQ=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -21,10 +21,10 @@
       "output": {
         ".html": {
           "relative_path": "GS1.HealthcareGMN.html",
-          "hash": "7h99+3nizZb5mxhQCHAnhA=="
+          "hash": "r/isNgJF//YvimyUgeF91A=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -33,10 +33,10 @@
       "output": {
         ".html": {
           "relative_path": "GS1.html",
-          "hash": "4+MwbJzxbCQuObqI0W2dmA=="
+          "hash": "7k8HLxhA20NJK9eKx53kyw=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -72,7 +72,7 @@
           "can_incremental": true,
           "incrementalPhase": "build",
           "total_file_count": 3,
-          "skipped_file_count": 3
+          "skipped_file_count": 1
         }
       }
     },
