--- a/js/package.json
+++ b/js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gmn-helpers",
+  "name": "healthcare-gmn-helpers",
   "version": "1.0.0",
   "private": true,
   "description": "setup node action",
