--- a/maintainer_scripts/Dockerfile
+++ b/maintainer_scripts/Dockerfile
@@ -1,4 +1,17 @@
-FROM ubuntu:bionic
+ARG DISTRO=focal
+ARG RELEASE=20.04
+ARG DOTNET_SDK=3.1
+ARG NVM_VERSION=0.35.3
+ARG NODE_VERSION=12.18.0
+
+
+FROM ubuntu:${DISTRO}
+
+ARG DISTRO
+ARG RELEASE
+ARG DOTNET_SDK
+ARG NVM_VERSION
+ARG NODE_VERSION
 
 ARG DEBIAN_FRONTEND=noninteractive
 
@@ -13,12 +26,12 @@ RUN apt-get update \
 #  C# library
 #
 RUN apt-key adv --fetch-keys https://packages.microsoft.com/keys/microsoft.asc \
- && add-apt-repository -y "deb [arch=amd64] https://packages.microsoft.com/ubuntu/18.04/prod bionic main" \
+ && add-apt-repository -y "deb [arch=amd64] https://packages.microsoft.com/ubuntu/${RELEASE}/prod ${DISTRO} main" \
  && apt-get update \
- && apt-get install -y --no-install-recommends dotnet-sdk-2.2
+ && apt-get install -y --no-install-recommends dotnet-sdk-${DOTNET_SDK}
 
 RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF \
- && add-apt-repository -y "deb https://download.mono-project.com/repo/ubuntu stable-bionic main" \
+ && add-apt-repository -y "deb https://download.mono-project.com/repo/ubuntu stable-${DISTRO} main" \
  && apt-get update \
  && apt-get install -y --no-install-recommends mono-devel
 
@@ -33,9 +46,6 @@ RUN apt-get update \
 #
 #  JS / Node.js library
 #
-ENV NVM_VERSION 0.33.11
-ENV NODE_VERSION 13.8.0
-
 ENV NVM_DIR "/nvm"
 RUN mkdir $NVM_DIR
 RUN curl -sL https://raw.githubusercontent.com/creationix/nvm/v$NVM_VERSION/install.sh | bash -
