Explicit mentions of "healthcare GMN"

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         cd cs
-        dotnet restore GS1GMN.sln
+        dotnet restore GS1HealthcareGMN.sln
     - name: Build
       run: |
         cd cs
