--- a/js/package.json
+++ b/js/package.json
@@ -17,5 +17,8 @@
     "eslint": "^6.8.0",
     "jest-cli": "^26.0.1",
     "jsdoc": "^3.6.4"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.10"
   }
 }
